--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="generalDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            General
+                            Mega_A
                         </a>
                         <div class="dropdown-menu" aria-labelledby="generalDropdown">
-                            <a class="dropdown-item" href="#">About the Hub</a>
+                            <a class="dropdown-item" href="#">subA</a>
                             <div class="dropdown-submenu dropend">
-                                <a class="dropdown-item dropdown-toggle" href="#">Emerald Network of Areas of Special Conservation Interest</a>
+                                <a class="dropdown-item dropdown-toggle" href="#">subB</a>
                                 <ul class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">General overview</a>
-                                    <a class="dropdown-item" href="#">Lists of Emerald sites in Moldova</a>
-                                    <a class="dropdown-item" href="#">Emerald Network Standard Data Form</a>
-                                    <a class="dropdown-item" href="#">Related links</a>
+                                    <a class="dropdown-item" href="#">subB_1</a>
+                                    <a class="dropdown-item" href="#">subB_2</a>
+                                    <a class="dropdown-item" href="#">subB_3</a>
+                                    <a class="dropdown-item" href="#">subB_4</a>
                                 </ul>
                             </div>
                             <div class="dropdown-submenu dropend">
-                                <a class="dropdown-item dropdown-toggle" href="#">The Natura 2000 protected areas network</a>
+                                <a class="dropdown-item dropdown-toggle" href="#">subC</a>
                                 <ul class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">General overview</a>
-                                    <a class="dropdown-item" href="#">Natura 2000 Standard Data Form</a>
-                                    <a class="dropdown-item" href="#">Related links</a>
+                                    <a class="dropdown-item" href="#">subC_1</a>
+                                    <a class="dropdown-item" href="#">subC_2</a>
+                                    <a class="dropdown-item" href="#">subC_3</a>
                                 </ul>
                             </div>
                         </div>
@@ -63,12 +63,12 @@
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="generalDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            LIFE RENATA project
+                            Mega_B
                         </a>
                         <div class="dropdown-menu" aria-labelledby="generalDropdown">
-                            <a class="dropdown-item" href="#">General overview</a>
-                            <a class="dropdown-item" href="#">Natura 2000 Standard Data Form</a>
-                            <a class="dropdown-item" href="#">Related links</a>
+                            <a class="dropdown-item" href="#">subA</a>
+                            <a class="dropdown-item" href="#">subB</a>
+                            <a class="dropdown-item" href="#">subC</a>
                         </div>
                     </li>
                 </ul>
@@ -77,54 +77,54 @@
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="generalDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            “Living” library
+                            Mega_C
                         </a>
                         <div class="dropdown-menu" aria-labelledby="generalDropdown">
                             <div class="dropdown-submenu  dropend">
-                                <a class="dropdown-item dropdown-toggle" href="#">Legislation/Policies/Guidelines</a>
+                                <a class="dropdown-item dropdown-toggle" href="#">subA</a>
                                 <ul class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">National legislation </a>
-                                    <a class="dropdown-item" href="#">Emerald Network </a>
-                                    <a class="dropdown-item" href="#">Natura 2000 Network </a>
-                                    <a class="dropdown-item" href="#">Other EU and international legislation and recommendations/guidelines</a>
+                                    <a class="dropdown-item" href="#">subA_1</a>
+                                    <a class="dropdown-item" href="#">subA_2</a>
+                                    <a class="dropdown-item" href="#">subA_3</a>
+                                    <a class="dropdown-item" href="#">subA_4</a>
                                 </ul>
                             </div>
 
                             <div class="dropdown-submenu  dropend">
-                                <a class="dropdown-item dropdown-toggle" href="#">Knowledge base </a>
+                                <a class="dropdown-item dropdown-toggle" href="#">subB</a>
                                 <ul class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">Biodiversity</a>
+                                    <a class="dropdown-item" href="#">subB_1</a>
                                     <div class="dropdown-submenu">
-                                        <a class="dropdown-item dropdown-toggle" href="#">Protected areas</a>
+                                        <a class="dropdown-item dropdown-toggle" href="#">subB_2</a>
                                         <ul class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">Nationally protected areas </a>
-                                            <a class="dropdown-item" href="#">Emerald Network</a>
-                                            <a class="dropdown-item" href="#">International protected areas </a>
+                                            <a class="dropdown-item" href="#">subB_2_1</a>
+                                            <a class="dropdown-item" href="#">subB_2_2</a>
+                                            <a class="dropdown-item" href="#">subB_2_3</a>
                                         </ul>
                                     </div>
 
 
-                                <a class="dropdown-item" href="#">Other conservation areas </a>
-                                <a class="dropdown-item" href="#">Mapping and Assessment of Ecosystems and their Services</a>
-                                <a class="dropdown-item" href="#">Pressures / Threats </a>
+                                <a class="dropdown-item" href="#">subB_3 </a>
+                                <a class="dropdown-item" href="#">subB_4</a>
+                                <a class="dropdown-item" href="#">subB_5</a>
 
 
                                 <div class="dropdown-submenu">
-                                    <a class="dropdown-item dropdown-toggle" href="#">Monitoring and Reporting</a>
+                                    <a class="dropdown-item dropdown-toggle" href="#">subB_6</a>
                                     <ul class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Monitoring</a>
-                                        <a class="dropdown-item" href="#">Reporting</a>
+                                        <a class="dropdown-item" href="#">subB_6_1 </a>
+                                        <a class="dropdown-item" href="#">subB_6_2 </a>
                                     </ul>
                                 </div>
 
 
                                 <div class="dropdown-submenu">
-                                    <a class="dropdown-item dropdown-toggle" href="#">Case studies </a>
+                                    <a class="dropdown-item dropdown-toggle" href="#">subB_7 </a>
                                     <ul class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Nationally protected areas’ management </a>
-                                        <a class="dropdown-item" href="#">Emerald sites’ management </a>
-                                        <a class="dropdown-item" href="#">Best practices in Natura 2000 sites </a>
-                                        <a class="dropdown-item" href="#">Innovative tools for monitoring and management</a>
+                                        <a class="dropdown-item" href="#">subB_7_1 </a>
+                                        <a class="dropdown-item" href="#">subB_7_2 </a>
+                                        <a class="dropdown-item" href="#">subB_7_3 </a>
+                                        <a class="dropdown-item" href="#">subB_7_4 </a>
                                     </ul>
                                 </div>
                                 </ul>
@@ -138,12 +138,12 @@
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="generalDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Projects' database
+                            Mega_D
                         </a>
                         <div class="dropdown-menu" aria-labelledby="generalDropdown">
-                            <a class="dropdown-item" href="#">National projects</a>
-                            <a class="dropdown-item" href="#">Transboundary projects</a>
-                            <a class="dropdown-item" href="#">International projects </a> 
+                            <a class="dropdown-item" href="#">subD_1 </a>
+                            <a class="dropdown-item" href="#">subD_2 </a>
+                            <a class="dropdown-item" href="#">subD_3 </a> 
 
                         </div>
                     </li>
@@ -153,12 +153,12 @@
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="generalDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Financial instruments
+                            Mega_E
                         </a>
                         <div class="dropdown-menu" aria-labelledby="generalDropdown">
-                            <a class="dropdown-item" href="#">National</a>
-                            <a class="dropdown-item" href="#">EU</a>
-                            <a class="dropdown-item" href="#">International</a> 
+                            <a class="dropdown-item" href="#">subE_1</a>
+                            <a class="dropdown-item" href="#">subE_2</a>
+                            <a class="dropdown-item" href="#">subE_3</a> 
 
                         </div>
                     </li>
@@ -168,11 +168,11 @@
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="generalDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Pool of experts
+                            Mega_F
                         </a>
                         <div class="dropdown-menu" aria-labelledby="generalDropdown">
-                            <a class="dropdown-item" href="#">National experts</a>
-                            <a class="dropdown-item" href="#">International experts</a> 
+                            <a class="dropdown-item" href="#">subF_1</a>
+                            <a class="dropdown-item" href="#">subF_2</a> 
 
                         </div>
                     </li>
@@ -181,9 +181,9 @@
 
                 <div class="col-md-3 col-sm-3 pt-2 pb-2" style="display:flex;border-style: solid;border-width: 5px;border-color: chartreuse;align-items: center;justify-content: center; gap: 20px;">
 
-                    <img src="./assets/life_1_1.jpg" alt="Life_Logo" height="50" id="Last">
-                    <img src="./assets/life_1_1.jpg" alt="Life_Logo" height="50" id="Last">
-                    <img src="./assets/life_1_1.jpg" alt="Life_Logo" height="50" id="Last">
+                    <img src="./assets/life_1_1.jpg" alt="Logo" height="50" id="Last">
+                    <img src="./assets/life_1_1.jpg" alt="Logo" height="50" id="Last">
+                    <img src="./assets/life_1_1.jpg" alt="Logo" height="50" id="Last">
                 </div>
 
 
